[project]
name = "samplecodes"
version = "0.1.0"
description = "Sample codes to use ROCm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "psutil>=7.2.1",
    "pytorch-triton-rocm>=3.5.1",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.24.0",
    "unsloth>=2026.1.2",
]

[[tool.uv.index]]
name = "pytorch-src"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-src" }
pytorch-triton-rocm = { index = "pytorch-src" }
